changing the imput sizes, and fixing the home link on mobile

--- a/src/pages/Contato/cto-styles.css
+++ b/src/pages/Contato/cto-styles.css
@@ -27,7 +27,7 @@
   border-radius: 5px;
   position: center;
   width: 600px;    
-  height: auto;
+  height: 25px;
   align-items: center;
 }
 
@@ -36,6 +36,7 @@
   font-family: "Modesto Poster W05 Regular";
   border-radius: 5px;
   width: 600px; 
+  height: 25px;
 }
 
 #Mensagem{
